# excaliosa

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  test_diagram.json  test_diagram_complex.json
.github/instructions/: memory.instruction.md
.github/workflows/: docker.yml
examples/: 3box.excalidraw  arrows.json  logo.json  test_arrowheads.json  test_curved_arrows.json  test_roughness.json
src/: arrow_utils.rs  color_utils.rs  converter.rs  font_utils.rs  lib.rs  main.rs  math_utils.rs  models.rs  rect_utils.rs  renderer.rs  renderer_skia.rs  stroke_utils.rs  tests.rs  utils.rs
