[package]
name = "excaliosa"
version = "0.2.0"
edition = "2024"
authors = ["Jo <git@jguer.space>"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5", features = ["derive"] }
resvg = "0.45"
tiny-skia = "0.11"
fontdb = "0.23"
anyhow = "1.0"
thiserror = "2"
palette = "0.7"
euclid = "0.22"
num-traits = "0.2"
parley = "0.6"
skrifa = "0.37"
roughr = "0.12"
rough_tiny_skia = "0.12"
